@@ -8,7 +8,7 @@ ICONS_SIZE=32
 
 override_dh_auto_configure:
 
-override_dh_auto_build::
+override_dh_auto_build:
 	# wallpaper
 	[ ! -d build/wallpaper ] && mkdir -p build/wallpaper
 	xcf2png -o build/wallpaper/neurodebian.png artwork/wallpaper_hotbrain.xcf
@@ -30,12 +30,12 @@ override_dh_auto_build::
 	help2man --no-info tools/nd-configurerepo \
 		-n "configure APT to use NeuroDebian repository" > build/man/nd-configurerepo.1
 
-override_dh_auto_install::
+override_dh_auto_install:
 
-override_dh_auto_test::
+override_dh_auto_test:
 
-override_dh_install::
-	dh_install $@
+override_dh_install:
+	dh_install
 	# shipped in a dedicated neurodebian-freeze package
 	rm -f  debian/neurodebian-dev/usr/bin/nd_freeze
 
